# C-Project

./: .gitignore  CMakeLists.txt  LICENSE  test.glade
resources/: resources.xml
src/: main.c
